--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .background{
   background-color: rgb(59, 57, 57);
   margin: 0;
-  padding: 170px;
+  padding-top: 50px;
+  padding-bottom: 100px;
 }
