--- a/src/components/NewExpense/AddNewExpense.css
+++ b/src/components/NewExpense/AddNewExpense.css
@@ -1,17 +1,12 @@
-.controls {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-.actions {
-    width: 87%;
+.background {
     background-color: #a892ee;
-    border-radius: 10px;
-    padding: 50px 0;
-    display: flex;
-    justify-content: center;
-    margin-top: 15px;
+    padding: 1rem;
+    margin: 2rem auto;
+    width: 50rem;
+    max-width: 95%;
+    border-radius: 12px;
+    text-align: center;
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
 }
 
 button {
